--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 .outerborder {
     border: 1px solid black;
     width: 65%;
-    min-height: 1500px; /* Set a minimum height to ensure the border is visible */
+    min-height: 1500px; 
     position: relative;
 }
-/* Add a class for initial background */
+
 .initial-background {
     background-color: rgb(255, 255, 150);
 }
@@ -35,7 +35,7 @@
 
 .upload-text {
     position: absolute;
-    top: 20x; /* Adjust based on your needs */
+    top: 20x; 
     left:200px;
     text-align:left;
     width: 100%;
@@ -58,7 +58,7 @@
 .tax-invoice {
     position: absolute;
     top: 3%;
-    left: 60%; /* Adjust based on your needs */
+    left: 60%; 
 }
 
 .tax-invoice p {
@@ -85,7 +85,7 @@
 
 .info input:hover,
 .info input:focus {
-     border: 1px solid #007BFF; /* Blue border on hover and focus */
+     border: 1px solid #007BFF; 
 }
 .invoice-details {
     display: flex;
@@ -114,7 +114,7 @@
 
 .bill-to input:hover,
 .bill-to input:focus {
-    border:1px solid #007BFF; /* Blue border on hover and focus */
+    border:1px solid #007BFF; 
 }
 #billto{
     font-weight: bold;
@@ -159,11 +159,11 @@
 
 .state-dropdown2 {
     margin-top: 3%;
-    margin-left: 10px; /* Adjust as needed */
+    margin-left: 10px; 
 }
 
 .state-dropdown2 .supply-state input {
-    width: 75%; /* Ensures the input takes up full width */
+    width: 75%; 
 }
 .supply-state p{
     font-weight: normal;
@@ -249,12 +249,12 @@ td:hover .remove-row {
     border:1px solid black;
     font-size: 1px;
 }
-/* Add a bottom border to each row in the table body */
+
 #invoiceTable tbody tr {
-    border-bottom: 1px solid #ddd; /* Adjust color and thickness as needed */
+    border-bottom: 1px solid #ddd; 
 }
 
-/* Optional: Remove the bottom border from the last row */
+
 #invoiceTable tbody tr:last-child {
     border-bottom: none;
 }
